# embedded-linux

./: README.md  Zephyr_installation.txt  beaglebone_setup.md  canbus.md  linux_embedded_debug.md  raspberry_pi_python.md
can_socket_server/: pyproject.toml
can_socket_server/can_socket_server/: __init__.py  abstract_server.py  can_handler.py  defines.py  multi_socket_server.py
can_socket_server/tests/: test_python_script.py
python/: can_socket_byte_data.py  can_socket_server.py  client.py
python_tmp_files/: can_rcv_all.py  can_socket_server.py  client.py  defines.py  multi_socket_client_test.py  multi_socket_test.py
